objects/ASI_CRM_ServicePackItem__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Item Group</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_MFM_Sub_brand__r.ASI_MFM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Service Pack Items</relationshipLabel>
        <relationshipName>Service_Pack_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Focus</fullName>
                </value>
                <value>
                    <fullName>Must Have</fullName>
                </value>
                <value>
                    <fullName>Must Product</fullName>
                </value>
                <value>
                    <fullName>Nice to Have</fullName>
                </value>
                <value>
                    <fullName>Push Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Act_Vis__c</fullName>
        <label>Act/Vis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Visibility</fullName>
                </value>
                <value>
                    <fullName>Presence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Bar_Styling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bar Styling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image_Activity__c</fullName>
        <label>Image Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Menu Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_KAI__c</fullName>
        <label>KAI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_No_of_Events__c</fullName>
        <label>No. of Events per outlet per year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Others__c</fullName>
        <label>Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_POSM_Cost__c</fullName>
        <label>POSM Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Rotation_Activity__c</fullName>
        <label>Rotation Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Signage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Signature_drink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature drink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Staff_incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Staff_training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sub_family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand\Quality</label>
        <referenceTo>ASI_CRM_Quality__c</referenceTo>
        <relationshipLabel>Service Pack Items</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Service_Pack_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Visibility_Bar__c</fullName>
        <label>Bar Visibility</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ServicePackItem_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Service Pack Item EXID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_ServicePack__c</fullName>
        <label>Service Pack</label>
        <referenceTo>ASI_CRM_ServicePack__c</referenceTo>
        <relationshipLabel>Service Pack Items</relationshipLabel>
        <relationshipName>Service_Pack_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand_Code__c</fullName>
        <label>Sub-brand Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Subbrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_TH_CRM_Product_Group_1__c</field>
                <operation>notContain</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Service Pack Items</relationshipLabel>
        <relationshipName>Service_Pack_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Priority_Sorting__c</fullName>
        <formula>if (Text( ASI_CRM_Priority__c) == &apos;Must Product&apos;, 1 , 
if (Text( ASI_CRM_Priority__c) == &apos;Push Product&apos;, 2 , 
if (Text( ASI_CRM_Priority__c) == &apos;Nice to Have&apos;, 3 , 4 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Sorting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Pack Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPI-{000000}</displayFormat>
        <label>Service Pack Items No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Pack Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_ServicePackItem</fullName>
        <active>true</active>
        <label>ASI_CRM_SG_ServicePackItem</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_ServicePackItem</fullName>
        <active>true</active>
        <label>ASI_CRM_TH_ServicePackItem</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_ServicePackItem</fullName>
        <active>true</active>
        <label>ASI_CRM_TW_ServicePackItem</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_ServicePackItem</fullName>
        <active>true</active>
        <label>ASI CRM VN ServicePackItem</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>